add files of homework, this is day03-04

--- a/day03-17-CSS/02_demo_星球介绍.html
+++ b/day03-17-CSS/02_demo_星球介绍.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../CSS/01_test.css">
+  <link rel="icon" href="../images/favicon.ico">
   <style>
     .item {
       width: 500px;
@@ -15,7 +17,7 @@
     vertical-align: top; */
 
     /* 方式二 */
-    /* float: left; */
+    float: left;
     }
     .item img {
       width: 500px;
@@ -35,11 +37,7 @@
     <h3>木星</h3>
     <img src="../images/Juptier.jpg" alt="木星图片">
     <p>
-      <span class="keyword">木星 （Jupiter）</span> 是太阳系八大行星中体积最大、自转最快的行星，从内向外的第五颗行星。它的质量为太阳
-      的千分之一，是太阳系中其它七大行星质量总和的2.5
-      倍。由于木星与土星、天王星、海王星皆属气体行星，因
-      此四者又合称类木行星（木星和土星合称气态巨行星）。
-      木星是一个气态巨行星，占所有太阳系行星质量的
+      <span class="keyword">木星 （Jupiter）</span> 是太阳系八大行星中体积最大、自转最快的行星，从内向外的第五颗行星。它的质量为太阳的千分之一，是太阳系中其它七大行星质量总和的2.5倍。由于木星与土星、天王星、海王星皆属气体行星，因此四者又合称类木行星（木星和土星合称气态巨行星）。木星是一个气态巨行星，占所有太阳系行星质量的
       70%，主要由氢组成，占其总质量的75%，其次为氨，
       占总质量的25%，岩核则含有其他较重的元素。人类所
       看到的通常是大气中云层的顶端，压强比1个大气压略
