--- a/day03-17-CSS/MDN预习CSS/index.html
+++ b/day03-17-CSS/MDN预习CSS/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="../MDN预习CSS/CSS/style.css">
+  <style>
+    #h-first {
+      font-size: 60px;
+      text-align: center;
+    }
+    h2 {
+      font-size: 25px;
+
+    }
+    body {
+      width: 600px;
+      margin: 0 auto;
+      background-color: #ff9500;
+      padding: 0 20px 20px 20px;
+      border: 5px solid black;
+    }
+    img {
+      width: 400px;
+      display: block;
+      margin: 0 auto;
+    }
+
+  </style>
 </head>
 <body>
-  
+  <div class="box1" id="demo1">
+    <h1 id="h-first">
+      这海岛跟我去的意大利渔村一样
+    </h1>
+  </div>
+  <div class="box2" id="demo2">
+    <p>趁着冬天没来总要去一趟海岛吧！ </p>
+    <p>沿着国内海岸线看一圈</p> 
+    <p>
+      这一次我们选择广东的海陵岛
+    </p>
+    <p>
+      一半是蔚蓝大海🌊一半是椰树林🌴
+    </p>
+    <p>
+      有晒不完的阳光还有踏不完的浪🏄🏻‍♀️
+    </p>
+    <p>
+      在一眼望不到头的大海边上,享受着阳光沙滩☀️
+    </p>
+  </div>
+  <div class="box3" id="demo3">
+    <h2>具体信息</h2>
+    <p>
+      🏖️名字：广东·海陵岛
+      📍位置：广东省-阳江市-江城区-闸坡镇-海陵岛
+      🚗交通：跨海大桥直达
+      🎫门票：¥0
+      ⏰游玩时间：两天一夜
+    </p>
+  </div>
+  <div class="box4">
+    <h2>路线</h2>
+    <p>
+      🚄动车：广州南-阳江站/15分钟一趟
+      🚙自驾：高速阳江港下，根据指示牌走省道即可
+      🚌公交：31路公交，20元/人， 20分钟/班，车程90分钟
+    </p>
+  </div>
+  <div class="box5">
+    <h3>打卡点推荐</h3>
+    <p>
+      ➡️大角湾：是最早开放的，可以玩水、拍照，玩水上项目，游客相对较多，吃住行比较方便，住宿条件
+      ➡️十里银滩：沙细人少浪大，有很长的海岸线，日出观赏点，还有海滨栈道
+      ➡️红树林：看海景建议涨潮时去，赶海建议退潮时
+      ➡️北洛秘境：百米高空700平米天际泳池，私人海滩，滨海栈道，儿童乐园等
+    </p>
+  </div>
+  <img class="img1" src="../" alt="地球照片">
 </body>
 </html>
