study day09, add a demo

--- a/day03-17-CSS/day09_元素定位-浮动/08_music_demo代码优化.html
+++ b/day03-17-CSS/day09_元素定位-浮动/08_music_demo代码优化.html
@@ -5,22 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./08_music_demo.css">
-  <style>
-    
-  </style>
-
+  <link rel="stylesheet" href="./08_music_demo代码优化.css">
+  <!-- html代码变化不大，主要抽取CSS的代码做优化 -->
 </head>
 <body>
   <div class="container">
     <div class="top">
-        <a class="cover" href="https://music.163.com/#/playlist?id=948471242"></a>
+        <a class="sprite_2 cover" href="https://music.163.com/#/playlist?id=948471242"></a>
           <img src="../images/music_ablum.jpg" alt="album">
-        <div class="bar">
-          <i class="icon"></i>
+        <div class="sprite_2 bar">
+          <i class="sprite_1 sprite_1_headset icon-headset"></i>
         <span class="nb">2346万</span>
+        <a class="sprite_1 sprite_2_play icon-play" href="https://music.163.com/#/playlist?id=948471242"></a>
         </div>
-        
     </div>
     <div class="bottom">
       <a href="https://music.163.com/#/playlist?id=948471242" class="content1">
@@ -28,17 +25,6 @@
       </a>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
