add music of wangyi demo

--- a/day03-17-CSS/demo-网易云音乐/01-top.html
+++ b/day03-17-CSS/demo-网易云音乐/01-top.html
@@ -5,8 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>网易云的top部分</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <div class="top">
+    <div class="topbar wrapper_01">
+      <div class="top-left">
+        top-left
+      </div>
+      <div class="top-right">
+        top-right
+      </div>
+    
+    </div>
+
+
+    <div class="topnav">
+
+
+
+
+    </div>
+
+
+
+
+
+
+  <div class="bottom"></div>
+
+
+
+
+
+
+  </div>
 </body>
 </html>
