--- a/day03-17-CSS/demo-网易云音乐/01-top.html
+++ b/day03-17-CSS/demo-网易云音乐/01-top.html
@@ -32,7 +32,7 @@
       </div>
       <div class="top-right">
         <div class="search">
-          <input type="text">
+          <input type="text" placeholder="音乐/视频/电台/用户">
         </div>
         <div class="author">
           <a href="">创作者中心</a>
