--- a/day03-17-CSS/demo-网易云音乐/01-top.html
+++ b/day03-17-CSS/demo-网易云音乐/01-top.html
@@ -45,13 +45,12 @@
     </div>
 
 
-    <div class="topnav">
+    <div class="nav">
       <div class="navbar wrapper_01">
-        
+<!-- 如果block元素中是没有内容, 那么line-height继承过来也是不生效-->
+      <!-- ul>(li>a[href=#].item)*6 -->
+        abd
       </div>
-
-      
-
     </div>
 
 
