add header code

--- a/day03-17-CSS/demo-网易云音乐/01-top.html
+++ b/day03-17-CSS/demo-网易云音乐/01-top.html
@@ -46,10 +46,18 @@
 
 
     <div class="nav">
-      <div class="navbar wrapper_01">
+      <div class="navbar warpper_01">
 <!-- 如果block元素中是没有内容, 那么line-height继承过来也是不生效-->
       <!-- ul>(li>a[href=#].item)*6 -->
-        abd
+        <ul class="list">
+          <li class="item active"><a href="#"><span>推荐</span></a></li>
+          <li class="item"><a href="#"><span>排行榜</span></a></li>
+          <li class="item"><a href="#"><span>歌单</span></a></li>
+          <li class="item"><a href="#"><span>主播电台</span></a></li>
+          <li class="item"><a href="#"><span>歌手</span></a></li>
+          <li class="item"><a href="#"><span>新碟上架</span></a></li>
+          
+        </ul>
       </div>
     </div>
 
