--- a/day03-17-CSS/demo-网易云音乐/01-top.html
+++ b/day03-17-CSS/demo-网易云音乐/01-top.html
@@ -46,7 +46,7 @@
 
 
     <div class="nav">
-      <div class="navbar warpper_01">
+      <div class="navbar wrapper_01">
 <!-- 如果block元素中是没有内容, 那么line-height继承过来也是不生效-->
       <!-- ul>(li>a[href=#].item)*6 -->
         <ul class="list">
