--- a/00-面试/CSS面试题/06-三栏布局的实现.html
+++ b/00-面试/CSS面试题/06-三栏布局的实现.html
@@ -37,7 +37,7 @@
 
 /* flex布局实现 */
 
-    /* .outer {
+    .outer {
       display: flex;
       height: 100px;
       background-color: aqua;
@@ -48,15 +48,16 @@
       width: 100px;
       background: green;
     }
+    .center {
+      flex: 1;
+      background-color: antiquewhite;
+    }
     .right {
       order: 1;
       width: 200px;
       background-color: blue;
     }
-    .center {
-      flex: 1;
-      background-color: antiquewhite;
-    } */
+    
 
 
 
