--- a/day03-17-CSS/day09_元素定位-浮动/11_float_京东多列布局.html
+++ b/day03-17-CSS/day09_元素定位-浮动/11_float_京东多列布局.html
@@ -61,7 +61,7 @@
       <div class="item item-right"></div>
       <div class="item item-right"></div>
       <div class="item item-right"></div>
-      <div class="item item-right"></div>
+      <div class="item item-right clear_fix"></div>
   </div>
     </div>
 </body>
