--- a/day03-17-CSS/demo-网易云音乐/02-banner.html
+++ b/day03-17-CSS/demo-网易云音乐/02-banner.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div class="banner">
-    <div class="area">
+    <div class="area wrapper_03">
       <div class="area-left">
         <ul class="img-list">
           <li>
