--- a/day03-17-CSS/demo-网易云音乐/02-banner.html
+++ b/day03-17-CSS/demo-网易云音乐/02-banner.html
@@ -86,6 +86,17 @@
             </a>
           </li>
         </ul>
+        <ul class="dots.list"></ul>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
+        <li class="item"><span><a href="#"></a></span></li>
       </div>
       <div class="area-right"></div>
     </div>
