--- a/day03-17-CSS/demo-网易云音乐/02-banner.html
+++ b/day03-17-CSS/demo-网易云音乐/02-banner.html
@@ -30,7 +30,7 @@
     }
 
 
-
+/* 轮播图的图片列表 */
     .area .area-left .img-list {
       display: flex;
       overflow: hidden;
@@ -51,6 +51,41 @@
       width: 100%;
       height: 258px;
     }
+
+/* 点的列表 */
+.banner .area-left .dots-list {
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  
+}
+/* 圆点之间的间距是由li造成的 */
+.banner .area-left .dots-list li {
+  margin: 0 2px;
+}
+
+.banner .area-left .dots-list .item {
+  
+  display: inline-block;
+  
+  width: 20px;
+  height: 20px;
+  background: url(./images/banner-bg-03.png) 0 9999px no-repeat;
+  background-position: 3px -343px;
+  
+}
+.banner .area-left .dots-list .item.active,
+.banner .area-left .dots-list .item:hover {
+  background: url(./images/banner-bg-03.png) 0 9999px no-repeat;
+  background-position: -16px -343px;
+}
+
+
+
 
 
     /* 设置右边的区域 */
@@ -86,17 +121,18 @@
             </a>
           </li>
         </ul>
-        <ul class="dots.list"></ul>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
-        <li class="item"><span><a href="#"></a></span></li>
+        <ul class="dots-list">
+          <li class="item active"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          <li class="item"><span><a href="#"></a></span></li>
+          
+        </ul>
+          
       </div>
       <div class="area-right"></div>
     </div>
