--- a/day03-17-CSS/demo-网易云音乐/02-banner.html
+++ b/day03-17-CSS/demo-网易云音乐/02-banner.html
@@ -189,5 +189,8 @@
       <a href="#" class="control control-right"></a>
     </div>
   </div>
+  <script>
+    alert(please)
+  </script>
 </body>
 </html>
