--- a/07-Vue/01-study/02-体验/01-动态数据.html
+++ b/07-Vue/01-study/02-体验/01-动态数据.html
@@ -7,15 +7,20 @@
   <title>Document</title>
 </head>
 <body>
+  
   <div id="app"></div>
-  <script src="../lib/vue.js"></script>
+  <script src="../vue.js"></script>
   <script>
-    // 创建app
     const app = Vue.createApp({
-      template:`<h1>hello world</h1>`
-    })
-    // 挂载app
-    app.mount("#app")
+      template:'<h2>{{message}}</h2>',
+      data: function() {
+        return {
+          title:"Hello",
+          message:"World"
+        }
+      }
+    }).mount("#app")
+
   </script>
 </body>
 </html>
